plugins/coding/src/config/snapshots/nyne_coding__config__tests__lsp_custom_server.snap
---
source: plugins/coding/src/config/tests.rs
expression: config.lsp.custom
---
[
    CustomLspServer {
        name: "ruff",
        command: "ruff",
        args: [
            "server",
        ],
        extensions: [
            "py",
        ],
    },
]
