plugins/coding/src/config/snapshots/nyne_coding__config__tests__lsp_multiple_custom_servers.snap
---
source: plugins/coding/src/config/tests.rs
expression: config.lsp.custom
---
[
    CustomLspServer {
        name: "ruff",
        command: "ruff",
        args: [
            "server",
        ],
        extensions: [
            "py",
        ],
    },
    CustomLspServer {
        name: "deno",
        command: "deno",
        args: [
            "lsp",
        ],
        extensions: [
            "ts",
            "tsx",
        ],
    },
]
